counter p setear ids autoincrementales y get posts